have general styling and button navigation working: ToDos: user accts, edit fx, delete fx, like fx

--- a/app/templates/admin/createAcct.tpl.html
+++ b/app/templates/admin/createAcct.tpl.html
@@ -7,7 +7,7 @@
     <input type="text" placeholder="Email">
     <input type="text" placeholder="Username">
     <input type="password" placeholder="Password">
-    <button ng-click="mainPageClick()">Submit</button>
+    <a href="#/userHomePage"><button>Submit</button></a>
   </form>
 
 
