--- a/app/templates/admin/login.tpl.html
+++ b/app/templates/admin/login.tpl.html
@@ -3,7 +3,7 @@
   <form class="logIn">
     <input type="text" placeholder="Username">
     <input type="password" placeholder="Password">
-    <button ng-click="mainPageClick()">Sign In</button>
+    <a href="#/userHomePage"><button>Sign In</button></a>
   </form>
 
 </div>
