--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8417,21 +8417,72 @@ th.hide-for-touch {
   list-style: none; }
 
 body {
-  background: gray; }
+  background: #2C3E5C; }
 
 .landingPage {
-  width: 500px;
-  margin: 15px auto; }
+  width: 100%;
+  height: 100vh;
+  background: url("../images/colin.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  .landingPage button {
+    border: 1px solid #333333;
+    background: #333333;
+    width: 25%;
+    position: relative;
+    top: 12em;
+    left: 6em;
+    display: block; }
+    .landingPage button:hover {
+      background: #0A41A0; }
 
 .logInPage {
-  width: 500px;
-  margin: 15px auto; }
+  width: 100%;
+  height: 100vh;
+  background: url("../images/colin.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  .logInPage input, .logInPage button {
+    border: 1px solid #333333;
+    margin-left: 2em;
+    width: 25%;
+    position: relative;
+    top: 9em; }
+  .logInPage button {
+    background: #333333;
+    margin-left: 1.8em; }
+    .logInPage button:hover {
+      background: #0A41A0; }
 
 .createAcct {
+  width: 100%;
+  height: 100vh;
+  background: url("../images/colin.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  .createAcct input, .createAcct button {
+    border: 1px solid #333333;
+    margin-left: 2em;
+    width: 25%;
+    position: relative;
+    top: 9em; }
+  .createAcct button {
+    background: #333333;
+    margin-left: 1.8em; }
+    .createAcct button:hover {
+      background: #0A41A0; }
+
+.addNew {
   width: 500px;
   margin: 15px auto; }
 
-.addNew {
+.editEntry {
   width: 500px;
   margin: 15px auto; }
 
@@ -8451,25 +8502,84 @@ body {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 23.23176%;
-  border-right: 1px solid black; }
+  width: 23.23176%; }
   .leftBar:last-child {
     margin-right: 0; }
+  .leftBar button {
+    margin-top: 5em;
+    background: #333333; }
 
 .rightBar {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 74.41059%; }
+  width: 74.41059%;
+  padding-left: 2em;
+  border-left: 3px solid #333333; }
   .rightBar:last-child {
     margin-right: 0; }
-  .rightBar img {
-    height: 15em;
-    width: 40%;
+  .rightBar .tile h2 {
+    color: #C1C9BF; }
+  .rightBar .block {
     display: inline-block; }
-  .rightBar .plusButton {
+  .rightBar img {
+    height: 10em;
+    width: 30%; }
+  .rightBar .editButton {
     height: 5em;
     width: 5em;
-    margin-left: 5em; }
+    margin-left: 4em; }
+    .rightBar .editButton a {
+      color: inherit; }
+  .rightBar div.rating {
+    font-size: 4em;
+    color: yellow;
+    margin-left: 1em;
+    text-align: center; }
+
+.singleRiverPage {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-left: 1%;
+  margin-top: 1%;
+  max-width: 77em; }
+  .singleRiverPage:before, .singleRiverPage:after {
+    content: " ";
+    display: table; }
+  .singleRiverPage:after {
+    clear: both; }
+
+.rtLeft {
+  float: left;
+  margin-left: 1em; }
+  .rtLeft span {
+    color: #C1C9BF; }
+
+.rtRight {
+  float: right;
+  margin-right: 1em; }
+  .rtRight span {
+    color: #C1C9BF; }
+
+.singleRiv .block {
+  display: inline-block; }
+
+.singleRiv img {
+  width: 50%;
+  height: 17em; }
+
+.singleRiv ul.block {
+  font-size: 1.6em;
+  max-width: 45%; }
+  .singleRiv ul.block span {
+    color: #C1C9BF; }
+
+.singleRiv .rivDescription {
+  color: #C1C9BF;
+  font-size: 1.2em;
+  margin-top: 2%;
+  padding: 2%;
+  border: 2px solid #333333; }
 
 /*# sourceMappingURL=main.css.map */
