--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,32 +3,96 @@
 @import 'font-awesome';
 @import 'foundation';
 
+$grayColor: #333333;
+$blueColor: #2C3E5C;
+$textColor: #C1C9BF;
+
 * {
   list-style: none;
 }
 
 body {
-  background: gray;
+  background: $blueColor;
 }
 
 .landingPage { 
-  width: 500px;
-  margin: 15px auto;
+  width: 100%;
+  height: 100vh;
+  background: url('../images/colin.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  button{
+    border: 1px solid $grayColor;
+    background: $grayColor;
+    width: 25%;
+    position: relative;
+    top: 12em;
+    left: 6em;
+    display: block;
+    &:hover {
+      background: #0A41A0;
+    }
+  }
 }
 
 .logInPage {
-  width: 500px;
-  margin: 15px auto;
+  width: 100%;
+  height: 100vh;
+  background: url('../images/colin.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  input, button{
+    border: 1px solid $grayColor;
+    margin-left: 2em;
+    width: 25%;
+    position: relative;
+    top: 9em;
+  }
+  button{
+    background: $grayColor;
+    margin-left: 1.8em;
+    &:hover {
+      background: #0A41A0;
+    }
+  }
 }
 
 .createAcct {
-  width: 500px;
-  margin: 15px auto;
+  width: 100%;
+  height: 100vh;
+  background: url('../images/colin.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  input, button{
+    border: 1px solid $grayColor;
+    margin-left: 2em;
+    width: 25%;
+    position: relative;
+    top: 9em;
+  }
+  button{
+    background: $grayColor;
+    margin-left: 1.8em;
+    &:hover {
+      background: #0A41A0;
+    }
+  }
 }
 
 .addNew {
   width: 500px;
   margin: 15px auto;
+}
+
+.editEntry{
+  width: 500px;
+  margin: 15px auto; 
 }
 
 .userHomePage {
@@ -38,29 +102,87 @@ body {
 }
 .leftBar{
   @include span-columns(3);
-  border-right: 1px solid black;
+  button {
+    margin-top: 5em;
+    background: $grayColor;
+  }
 }
 .rightBar{
   @include span-columns(9);
-  img {
-    height: 15em;
-    width: 40%;
+  padding-left: 2em;
+  border-left: 3px solid $grayColor;
+  .tile h2{
+    color: $textColor;
+  }
+  .block {
     display: inline-block;
   }
-  .plusButton {
+  img {
+    height: 10em;
+    width: 30%;
+  }
+  .editButton {
     height: 5em;
     width: 5em;
-    margin-left: 5em;
+    margin-left: 4em;
+    a{
+      color: inherit;
+    }
+  }
+  div.rating{
+    font-size: 4em;
+    color: yellow;
+    margin-left: 1em;
+    text-align: center;
   }
 }
 
+.singleRiverPage{
+  @include outer-container;
+  margin-left: 1%;
+  margin-top: 1%;
+  max-width: 77em;
+}
 
+.rtLeft{
+  float: left;
+  margin-left: 1em;
+  span{
+    color: $textColor;
+  }
+}
+.rtRight{
+  float: right;
+  margin-right: 1em;
+  span {
+    color: $textColor;
+  }
+}
 
-  // background: url('../images/colin.jpg') no-repeat center center fixed; 
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // -o-background-size: cover;
-  // background-size: cover;
+.singleRiv{
+  .block{
+    display: inline-block;
+  }
+  img{
+    width: 50%;
+    height: 17em; 
+  }
+  ul.block{
+    font-size: 1.6em;
+    max-width: 45%;
+    span{
+      color: $textColor;
+    }
+  }
+  .rivDescription{
+    color: $textColor;
+    font-size: 1.2em;
+    margin-top: 2%;
+    padding: 2%;
+    border: 2px solid $grayColor;
+  }
+}
+
 
 
 
