--- a/app/templates/singleRiver.tpl.html
+++ b/app/templates/singleRiver.tpl.html
@@ -26,10 +26,13 @@
         <li> Location: <span>{{ singleRiver.location }}</span> </li>
         <li> Water Level: <span>{{ singleRiver.level }}</span> </li>
       </ul>
-        <p class="rivDescription"> Description: {{ singleRiver.description }} </p>
+      
+      <p class="rivDescription"> Description: {{ singleRiver.description }} </p>
 
+      <div class="block delete">
+        <button ng-click="delete()">Remove Post</button>
+      </div>
     </div>
-
   </div>
   
 </div>
