--- a/app/templates/singleRiver.tpl.html
+++ b/app/templates/singleRiver.tpl.html
@@ -25,6 +25,10 @@
         <li> Class: <span>{{ singleRiver.class }}</span> </li>
         <li> Location: <span>{{ singleRiver.location }}</span> </li>
         <li> Water Level: <span>{{ singleRiver.level }}</span> </li>
+        <li> Boat Paddled: <span>{{ singleRiver.boat }}</span> </li>
+        <li> Other Equipment: <span>{{ singleRiver.equipment }}</span> </li>
+
+
       </ul>
       
       <p class="rivDescription"> Description: {{ singleRiver.description }} </p>
