--- a/app/templates/editRiver.tpl.html
+++ b/app/templates/editRiver.tpl.html
@@ -5,7 +5,9 @@
     <input ng-model="singleRiver.location">
     <input ng-model="singleRiver.class">
     <input ng-model="singleRiver.level">
-    <input type="date" ng-model="singleRiver.date">
+    <input ng-model="singleRiver.date">
+    <input ng-model="singleRiver.boat">
+    <input ng-model="singleRiver.equipment">
     <input ng-model="singleRiver.userRating">
     <textarea ng-model="singleRiver.description"></textarea>
     <button>Submit Changes</button>
