--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,6 +102,9 @@ body {
 }
 .leftBar{
   @include span-columns(3);
+  span{
+    color: red;
+  }
   button {
     margin-top: 5em;
     background: $grayColor;
@@ -160,6 +163,10 @@ body {
 }
 
 .singleRiv{
+  .singleRiverPhoto{
+    position: relative;
+    bottom: 5.2em;
+  }
   .block{
     display: inline-block;
   }
@@ -175,6 +182,8 @@ body {
     }
   }
   .rivDescription{
+    position: relative;
+    bottom: 4.5em;
     color: $textColor;
     font-size: 1.2em;
     margin-top: 2%;
@@ -187,6 +196,9 @@ body {
   position: relative;
   top: 2em;
   margin-left: 2em;
+  span{
+    color: red;
+  }
   button {
     text-align: center;
     display: block;
