--- a/sass/main.scss
+++ b/sass/main.scss
@@ -92,7 +92,10 @@ body {
 
 .editEntry{
   width: 500px;
-  margin: 15px auto; 
+  margin: 15px auto;
+  span{
+    color: $textColor;
+  } 
 }
 
 .userHomePage {
@@ -114,29 +117,34 @@ body {
   @include span-columns(9);
   padding-left: 2em;
   border-left: 3px solid $grayColor;
-  .tile h2{
-    color: $textColor;
-  }
+  color: $textColor;
   .block {
     display: inline-block;
   }
   img {
     height: 10em;
     width: 30%;
+    position: relative;
+    bottom: 5.5em;
   }
   .editButton {
-    height: 2em;
-    width: 2em;
     margin-left: 2em;
+    position: relative;
+    bottom: 5em;
     a{
       color: inherit;
     }
+    i{
+      color: black;
+    }
   }
-  div.rating{
+  div.description{
     font-size: 3em;
-    color: yellow;
     margin-left: 1em;
-    text-align: center;
+    width: 8em;
+    height: 4em;
+    overflow: scroll;
+    whitespace: no-wrap;
   }
 }
 
@@ -158,7 +166,7 @@ body {
   float: right;
   margin-right: 1em;
   span {
-    color: $textColor;
+    color: yellow;
   }
 }
 
